UNRELEASED

- Wait for thread termination in axel.c:axel_do (Closes: #311255), thanks John Ripa
- Fix LFS support for FTP (Closes: #311320)
- Fix LFS support (Closes: #311324)

Version 2.2:

- Fix a buffer overflow in http.c:http_encode.

Version 2.1:

- Fix version string.  2.0 still reported 1.1, thanks Ajay R Ramjatan
- Fix new MB/s display (was showing B/s).  Thanks Philipp Hagemeister

Version 2.0:

- Large file support thanks thanks David Turnbull
- Custom Header Support thanks Eli Yukelzon
- New russian translation thanks newhren
- Fix segfault in -H option thanks Philipp Hagemeister
- Honour http_proxy and prefer it over HTTP_PROXY
- Add new RPM spec file thanks bbbush

Finished Sep 12 2008

Version 1.1:

- Compilation for GNU/kFreeBSD, thanks to Cyril Brulebois
- Use simple pop-ups for Help and Bug Report buttons
- Use strncpy instead of strcpy for length sensitive copies
- Always compile with -g, disable -O3
- Translation updates: de.po thanks Hermann J. Beckers
- Update manpages axel.1 and axel-kapt.1
- Prevent crash and raise error if FTP CWD fails
- Prevent crash on long URLs and increase max length of URL to 1024
- Fix segfaults on HTTP404 and HTTP401 responses

Finished Jan 18 2008

Version 1.0b:
- Removed spaces between -S[x] in man-pages, etc. They mess things up.
- Fixed configure for OpenBSD.
- Fixed configuration bug: s/alternate_interface/alternate_output/ in
  axelrc.example, thanks to CLOTILDE Guy Daniel for the bug report!
- Fixed weird behaviour when downloading from an unsupported server.
- Fixed buffer overflow in conn.c. (CAN-2005-0390)

Finished Apr 06 2005


Version 1.0a:
- gstrip on Solaris/SPARC breaks the binary, so stripping is made optional
  (but enabled by default!) and /usr/ccs/bin/strip is used instead of
  gstrip.
- Fixed a small (not harmful) errorcode interpretation bug in the ftp_size
  code.
- Downloading from unsupported sites works better now.
- Added support for downloading using more than one local network interface.